[package]
name = "guessing_game_poen"
version = "0.1.1"
edition = "2021"
authors = ["poen <13143758550@163.com>"]
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
